--- a/9. 回文数.md
+++ b/9. 回文数.md
@@ -25,10 +25,9 @@
 # python2
 
 ## 字符串 【推荐】
-'''
-执行用时7ms
-消耗内存12.2MB
-'''
+// 执行用时7ms
+// 消耗内存12.2MB
+```
 class Solution(object):
     def isPalindrome(self, x):
         """
@@ -40,12 +39,12 @@ class Solution(object):
             if s[i]!=s[len(s)-1-i]:
                 return False
         return True
+```
 
 ## 整数
-'''
-执行用时20ms
-消耗内存12.4MB
-'''
+// 执行用时20ms
+// 消耗内存12.4MB
+```
 class Solution(object):
     def isPalindrome(self, x):
         """
@@ -68,6 +67,7 @@ class Solution(object):
             if alist[i]!=blist[i]:
                 return False
         return True
+'''
 
 # python3 
 
