--- a/9. 回文数.md
+++ b/9. 回文数.md
@@ -1,5 +1,4 @@
 # 9. 回文数 题目描述
-
 给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。
 回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
 例如，121 是回文，而 123 不是。
@@ -23,7 +22,6 @@
 进阶：你能不将整数转为字符串来解决这个问题吗？
 
 # python2
-
 ## 字符串 【推荐】
 // 执行用时7ms  
 // 消耗内存12.2MB  
@@ -67,10 +65,14 @@ class Solution(object):
             if alist[i]!=blist[i]:
                 return False
         return True
-'''
+```
 
 # python3 
+待补充  
 
 # JAVA
+待补充  
 
 # go
+待补充  
+
