--- a/1.两数之和.md
+++ b/1.两数之和.md
@@ -1,14 +1,10 @@
 # 题目描述
+1、两数之和
+https://leetcode.cn/problems/two-sum/description/  
 
-1. 两数之和
-
-https://leetcode.cn/problems/two-sum/description/
-
-给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
-
-你可以假设每种输入只会对应一个答案，并且你不能使用两次相同的元素。
-
-你可以按任意顺序返回答案。
+给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。  
+你可以假设每种输入只会对应一个答案，并且你不能使用两次相同的元素。  
+你可以按任意顺序返回答案。  
 
 示例 1：
 输入：nums = [2,7,11,15], target = 9
@@ -32,10 +28,9 @@ https://leetcode.cn/problems/two-sum/description/
 # python2
 
 ## python list数组
-'''
-执行用时1835ms
-消耗内存13.3MB
-'''
+// 执行用时1835ms
+// 消耗内存13.3MB
+```
 class Solution(object):
     def twoSum(self, nums, target):
         """
@@ -47,20 +42,21 @@ class Solution(object):
             for j in range(i+1, len(nums)):
                 if nums[i]+nums[j] == target:
                     return [i,j]
+```
 
 ## python dict字典 【推荐】
 
 Python中字典基于哈希表查找，时间复杂度为O(1)，对比列表有大幅提升。列表（list）中查找元素的时间复杂度为O(n)。
 
-《python中in在list和dict中查找效率比较》
-https://blog.csdn.net/wzgbm/article/details/54691615?share_token=27d60dec-5f4a-4f3a-8307-28073e72e546
-《Python 深入理解dict---为什么 dict 查询元素比 list 快？》
-https://blog.csdn.net/be5yond/article/details/120021250?share_token=2961c2bf-0ccf-4185-86d9-18ac015d1fd9
+《python中in在list和dict中查找效率比较》  
+https://blog.csdn.net/wzgbm/article/details/54691615?share_token=27d60dec-5f4a-4f3a-8307-28073e72e546  
 
-'''
-执行用时0ms
-消耗内存13MB
-'''
+《Python 深入理解dict---为什么 dict 查询元素比 list 快？》  
+https://blog.csdn.net/be5yond/article/details/120021250?share_token=2961c2bf-0ccf-4185-86d9-18ac015d1fd9  
+
+// 执行用时0ms  
+// 消耗内存13MB  
+```
 class Solution(object):
     def twoSum(self, nums, target):
         """
@@ -76,12 +72,15 @@ class Solution(object):
                 return [i, adict[left]]
             else:
                 adict[nums[i]] = i
-
+```
 
 # python3 
+待补充
 
 # JAVA
+待补充
 
 # go
+待补充
 
 
