2025/4/7, solve some easy problems.

--- a/算法_中等/0000.md
+++ b/算法_中等/0000.md
@@ -1,6 +1,6 @@
 # 题目描述
 
-难度：中等
+难度：简单
 标签：
 
 # python2
@@ -8,6 +8,14 @@
 // 执行用时20ms，击败%
 // 消耗内存12.4MB，击败%
 ```
+```
+## FAQ
+
+1、报错 “超出时间限制”，打印时间，定位哪行代码导致的。
+```
+import datetime
+
+print(datetime.datetime.now().strftime("%Y-%m-%d %H:%M:%S"))
 ```
 
 # python3 
